--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ruby-3.0, ruby-3.1, ruby-3.2]
-        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+        ruby:
+          - ruby-2.7
+          - ruby-3.0
+          - ruby-3.1
+          - ruby-3.2
+          - ruby-3.3
+          - ruby-3.4
+          - jruby-9.4
+          - truffleruby
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
 
     steps:
       - name: repo checkout
